<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<packaging>pom</packaging>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.1</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>be.vlaanderen.vip.mock</groupId>
	<artifactId>magda</artifactId>
	<version>0.12.0-SNAPSHOT</version>
	<name>magdaservice</name>
	<description>MAGDA diensten Mock voor afnemers</description>
	<properties>
		<java.version>17</java.version>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<magda-openjdk.version>11.0.15</magda-openjdk.version>
		<docker.image>magdamock.service</docker.image>
		<assertj-core.version>3.22.0</assertj-core.version>
		<cloud.starter.sleuth.version>3.1.3</cloud.starter.sleuth.version>
		<cloud.starter.zipkin.version>2.2.8.RELEASE</cloud.starter.zipkin.version>
		<commons-io.version>2.11.0</commons-io.version>
		<commons-lang3.version>3.12.0</commons-lang3.version>
		<dom4j.version>2.1.3</dom4j.version>
		<jackson-databind-nullable.version>0.2.1</jackson-databind-nullable.version>
		<jackson-dataformat-yaml.version>2.13.2</jackson-dataformat-yaml.version>
		<javax.json.version>1.1.4</javax.json.version>
		<log4j2.version>2.18.0</log4j2.version>
		<logstash.logback.version>7.0.1</logstash.logback.version>
		<lombok.version>1.18.22</lombok.version>
		<mapstruct-lombok.version>0.2.0</mapstruct-lombok.version>
		<mockito.version>4.8.1</mockito.version>
		<org.apache.wss4j.version>2.4.1</org.apache.wss4j.version>
		<spring-cloud.version>2021.0.4</spring-cloud.version>
		<springdoc.api>1.6.6</springdoc.api>
		<springfox-swagger2.version>3.0.0</springfox-swagger2.version>
		<sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco-aggregated/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
		<sonar.language>java</sonar.language>
	</properties>

	<!-- infrastructure -->
	<distributionManagement>
		<repository>
			<id>central</id>
			<name>magda-public-release</name>
			<url>https://vlaamseoverheid.jfrog.io/vlaamseoverheid/magda-public-release</url>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<name>magda-public-snapshot</name>
			<url>https://vlaamseoverheid.jfrog.io/vlaamseoverheid/magda-public-snapshot</url>
		</snapshotRepository>
	</distributionManagement>

	<modules>
		<module>magdaservice</module>
		<module>magdamock</module>
		<module>magdaconnector</module>
		<module>interfaces</module>
	</modules>



</project>
